# Vayam-AI-backend-rs

./: .env  .env.example  .gitignore  Cargo.toml  README.md  abi.json
src/: db.rs  error.rs  handler.rs  main.rs  model.rs  response.rs  route.rs  schema.rs  utils.rs
src/web/: mod.rs  mw_auth.rs  route.rs  token.rs
