[package]
name = "vayamai-axum-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
dotenv = "0.15"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
mongodb = { version = "2.5", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.27", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
